--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a href="" class="navbar-brand">Rashadul.</a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#exampleNav" aria-controls="exampleNav" aria-expanded="false" aria-label="Toggle" Navigation="">
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#exampleNav" aria-controls="exampleNav" aria-expanded="false" aria-label="Toggle" navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
